# covivy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_bigint_github_annotation_ids.py  0003_pr_file_annotations.py  0004_pr_file_line_annotations.py  0005_pr_file_line_content.py  0006_dashboard_identity_provider_settings.py  0007_dashboard_local_users.py  0008_pr_file_source_content.py
app/: __init__.py  config.py  coverage.py  dashboard.py  db.py  github.py  main.py  models.py  security.py  services.py  storage.py  worker.py
app/providers/: __init__.py  base.py  github.py  gitlab.py  registry.py
app/views/: __init__.py  coverage_dashboard.py
docs/: GITHUB_PAGES.md  _config.yml  index.md
docs/superpowers/plans/: 2026-07-20-github-pages-blog.md  2026-07-20-oauth-token-refresh.md
docs/superpowers/specs/: 2026-07-20-github-pages-blog-design.md  2026-07-20-oauth-token-refresh-design.md
scripts/: create_repo_token.py  generate_blog_flow_diagram.py  local_e2e_upload.py  typescript_semantic_analyzer.mjs  upload_coverage_to_covivy.sh
tests/: test_api.py  test_config.py  test_coverage_core.py  test_dashboard_auth.py  test_github_actions_config.py  test_github_client.py  test_local_e2e_upload_script.py  test_providers.py  test_services.py  test_upload_coverage_shell_script.py  test_worker.py
upload-action/: action.yml
