[project]
name = "covivy"
version = "0.1.0"
description = "Self-hosted Codecov-like coverage service"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "PyJWT[crypto]>=2.8",
  "cryptography==42.0.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
